--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="css/main.css" >
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=New+Rocker&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <title>Ekarikthin'20 - Sharing the same Heritage</title>
 </head>
 <body>
     <div class="wrapper">
         <nav id="navbar" class="sticky_nav">
             <ul class="nav_links_ul">
-                <li><a class="nav_link_anchor" href="#events">Events</a></li>
-                <li><a class="nav_link_anchor" href="#gallery">Gallery</a></li>
-                <li><a class="nav_link_anchor" href="#contacts">Contacts</a></li>
-                <li><a class="nav_link_anchor" href="#developers">Developers</a></li>
+                <li><a class="nav_link_anchor" href="#events" onclick="smoothScroll('events');return false">Events</a></li>
+                <li><a class="nav_link_anchor" href="#gallery" onclick="smoothScroll('gallery');return false">Gallery</a></li>
+                <li><a class="nav_link_anchor" href="#contacts" onclick="smoothScroll('contacts');return false">Contacts</a></li>
+                <li><a class="nav_link_anchor" href="#developers" onclick="smoothScroll('developers');return false">Developers</a></li>
             </ul>
         </nav>
         <main>
@@ -47,6 +46,11 @@
                 </svg>                     
 
                 <div id="countdown_timer">
+                </div>
+                <div class="social_media">
+                    <a href="https://www.facebook.com/Ekarikthin/"><img src="./img/facebook.png" alt="" class="facebook"></a>
+                    <a href="https://www.instagram.com/ekarikthin_/"><img src="./img/instagram.png" alt="" class="insta"></a>
+                    <a href="https://www.youtube.com/channel/UCAaVwaP0-fsHeq3ninrKo1w"><img src="./img/youtube.png" alt="" class="youtube"></a>
                 </div>
             </section>
             <section id="events">
