--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <div id="countdown_timer">
                 </div>
                 <div class="social_media">
-                    <a href="https://www.facebook.com/Ekarikthin/"><img src="./img/facebook.png" alt="" class="facebook"></a>
-                    <a href="https://www.instagram.com/ekarikthin_/"><img src="./img/instagram.png" alt="" class="insta"></a>
-                    <a href="https://www.youtube.com/channel/UCAaVwaP0-fsHeq3ninrKo1w"><img src="./img/youtube.png" alt="" class="youtube"></a>
+                    <a href="https://www.facebook.com/Ekarikthin/" target="_blank"><img src="./img/facebook.png" alt="" class="facebook"></a>
+                    <a href="https://www.instagram.com/ekarikthin_/" target="_blank"><img src="./img/instagram.png" alt="" class="insta"></a>
+                    <a href="https://www.youtube.com/channel/UCAaVwaP0-fsHeq3ninrKo1w" target="_blank"><img src="./img/youtube.png" alt="" class="youtube"></a>
                 </div>
             </section>
             <section id="events">
